trunk/Archive2/a6/89aa606447aebc/output
main.cpp:9:3: error: use of undeclared identifier 'cout'; did you mean 'std::cout'?
                cout << static_cast<int>(static_cast<uint8_t>(ch)) << ", ";
                ^~~~
                std::cout
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/iostream:61:18: note: 'std::cout' declared here
  extern ostream cout;          /// Linked to standard output
                 ^
1 error generated.
